# redis-operator

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_REFERENCE.md  app.py  build.bat  build_icon.py  conductor.spec  download_redis.py  installer.iss  launch.py  pyproject.toml  redis_operator.spec  requirements.txt  run_inno.py  server.json  server.py  start.bat
.github/workflows/: tests.yml
static/: index.html
tasks/: example_task.py
tests/: conftest.py  test_api.py  test_scheduler.py
